cmake_minimum_required (VERSION 2.8.12)
project (VisIVOServer C CXX)

add_executable(VisIVOImporter src/VisIVOImporter/Importers/abstractsource.cpp	src/VisIVOImporter/Importers/binsource.cpp		src/VisIVOImporter/Importers/fitsimagesource.cpp	src/VisIVOImporter/Importers/flysource.cpp			src/VisIVOImporter/Importers/mainImporter.cpp	src/VisIVOImporter/Importers/ramsessource.cpp	src/VisIVOImporter/Importers/rawpointssource.cpp	src/VisIVOImporter/Importers/vosourcenew.cpp src/VisIVOImporter/Importers/asciisource.cpp src/VisIVOImporter/Importers/csvsource.cpp src/VisIVOImporter/Importers/fitstablesource.cpp	src/VisIVOImporter/Importers/gadgetsource.cpp	src/VisIVOImporter/Importers/hdf5source.cpp src/VisIVOImporter/Importers/muportalsource.cpp	src/VisIVOImporter/Importers/rawgridsource.cpp src/VisIVOImporter/Importers/vtksource.cpp src/Utils/tinystr.cpp src/Utils/tinyxml.cpp src/Utils/tinyxmlerror.cpp src/Utils/tinyxmlparser.cpp src/Utils/historyXmlWriter.cc src/Utils/commandline.cpp src/Utils/visivoutils.cpp  )